h4_vision/check_errors_v8.txt
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Checking h4_vision v0.1.0 (D:\PROJECTS\h4_GameHack\h4_vision)
error[E0599]: no method named `screen` found for reference `&Window` in the current scope
  --> h4_vision\src\main.rs:91:48
   |
91 |     if let Some(screen_size) = splash.window().screen().map(|s| s.size()) {
   |                                                ^^^^^^ method not found in `&Window`

error[E0282]: type annotations needed
  --> h4_vision\src\main.rs:91:62
   |
91 |     if let Some(screen_size) = splash.window().screen().map(|s| s.size()) {
   |                                                              ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
91 |     if let Some(screen_size) = splash.window().screen().map(|s: /* Type */| s.size()) {
   |                                                               ++++++++++++

error[E0599]: no method named `screen` found for reference `&Window` in the current scope
   --> h4_vision\src\main.rs:176:44
    |
176 |     if let Some(screen_size) = ui.window().screen().map(|s| s.size()) {
    |                                            ^^^^^^ method not found in `&Window`

error[E0282]: type annotations needed
   --> h4_vision\src\main.rs:176:58
    |
176 |     if let Some(screen_size) = ui.window().screen().map(|s| s.size()) {
    |                                                          ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
176 |     if let Some(screen_size) = ui.window().screen().map(|s: /* Type */| s.size()) {
    |                                                           ++++++++++++

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: could not compile `h4_vision` (bin "h4_vision") due to 4 previous errors
